objects/ssot__FulfillmentOrderProductTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderProductId__c</fullName>
        <label>Fulfillment Order Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderProductTaxAmount__c</fullName>
        <label>Fulfillment Order Product Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderTaxId__c</fullName>
        <label>Fulfillment Order Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Order Product Tax Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213371_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderProductTax_Fulfillme_rel</label>
        <referenceTo>ssot__FulfillmentOrderTax__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderProductTax_Fulfillme_rel</relationshipLabel>
        <relationshipName>rel_1697761213371_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214048_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderProductTax_Fulfillme_rel</label>
        <referenceTo>ssot__FulfillmentOrderProduct__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderProductTax_Fulfillme_rel</relationshipLabel>
        <relationshipName>rel_1697761214048_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>